--- a/Movie Recommendation System.ipynb
+++ b/Movie Recommendation System.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "0238dea9",
    "metadata": {},
    "outputs": [
@@ -838,14 +838,14 @@
        "9        Comedy|Romance  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#recommended movies top 10\n",
-    "pd.merge(movies_not_watched, movies, how='inner', on=['movieId']).dropna().head(10)"
+    "pd.merge(movies_not_watched, movies, how='left', on=['movieId']).dropna().head(10)"
    ]
   },
   {
